discussion/kv_engine/185542/185542_rev2_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-54975: Merge branch 'cheshire-cat' into 7.1.4

* commit 'ae558e219':
  MB-54975: Update Ephemeral replica memory stats on DEL_VBUCKET

Change-Id: Ibfd4c6b48893f757f6f018c80b31291fa08b9c01

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Dave Rigby
Date: 2023-01-27 14:31:20.000000000
Message: 
Uploaded patch set 2.
----------------------------------------------------------------------------------------------------------------------
Author: Restriction Checker
Date: 2023-01-27 14:31:43.000000000
Message: 
Patch Set 2: Well-Formed+1

Permission granted to commit: 

https://server.jenkins.couchbase.com/job/restricted-branch-check/334693/artifact/restricted.html : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2023-01-27 15:41:20.000000000
Message: 
Patch Set 2: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-windows-714/37/ : FAILURE

Compile error at ..\kv_engine\engines\ep\tests\module_tests\ephemeral_bucket_test.cc(254): error C2664: "cb::engine_errc EventuallyPersistentEngine::deleteVBucket(const CookieIface &,Vbid,bool)": cannot convert argument 1 from "CookieIface *" to "const CookieIface &" ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-714/37/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-714/24/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-714/kv_engine/engines/ep/tests/module_tests/ephemeral_bucket_test.cc:255:37: error: reference to type "const CookieIface" could not bind to an lvalue of type "CookieIface *" [clang-diagnostic-error]
              engine->deleteVBucket(cookie, vbid, false));
                                    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-714/build-kv_engine-clang-tidy/tlm/deps/googletest.exploded/include/gtest/gtest.h:2044:69: note: expanded from macro "EXPECT_EQ"
  EXPECT_PRED_FORMAT2(::testing::internal::EqHelper::Compare, val1, val2)
                                                                    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-714/build-kv_engine-clang-tidy/tlm/deps/googletest.exploded/include/gtest/gtest_pred_impl.h:164:40: note: expanded from macro "EXPECT_PRED_FORMAT2"
  GTEST_PRED_FORMAT2_(pred_format, v1, v2, GTEST_NONFATAL_FAILURE_)
                                       ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-714/build-kv_engine-clang-tidy/tlm/deps/googletest.exploded/include/gtest/gtest_pred_impl.h:149:43: note: expanded from macro "GTEST_PRED_FORMAT2_"
  GTEST_ASSERT_(pred_format(#v1, #v2, v1, v2), \
                                          ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-714/build-kv_engine-clang-tidy/tlm/deps/googletest.exploded/include/gtest/gtest_pred_impl.h:77:52: note: expanded from macro "GTEST_ASSERT_"
  if (const ::testing::AssertionResult gtest_ar = (expression)) \
                                                   ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-714/kv_engine/engines/ep/src/ep_engine.h:899:54: note: passing argument to parameter "cookie" here
    cb::engine_errc deleteVBucket(const CookieIface& cookie,
                                                     ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-714/24/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-714/kv_engine/engines/ep/tests/module_tests/ephemeral_bucket_test.cc:255:37:
error: reference to type "const CookieIface" could not bind to an lvalue of type "CookieIface *" [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-714/24/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/7.1.4/27/ : FAILURE

Compile error at [2023-01-27T15:39:32.642Z] ../kv_engine/engines/ep/tests/module_tests/ephemeral_bucket_test.cc:255:37:
error: cannot convert ?CookieIface*? to ?const CookieIface&?
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/7.1.4/27/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/7.1.4/25/ : FAILURE

Compile error at [2023-01-27T15:30:08.789Z] ../kv_engine/engines/ep/tests/module_tests/ephemeral_bucket_test.cc:255:37:
error: cannot convert ?CookieIface*? to ?const CookieIface&?
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/7.1.4/25/ )

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/7.1.4/25/ : FAILURE

Compile error at [2023-01-27T15:40:44.819Z] ../kv_engine/engines/ep/tests/module_tests/ephemeral_bucket_test.cc:255:37:
error: reference to type "const CookieIface" could not bind to an lvalue of type "CookieIface *"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/7.1.4/25/ )

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/7.1.4/23/ : FAILURE

Compile error at [2023-01-27T15:07:44.875Z] ../kv_engine/engines/ep/tests/module_tests/ephemeral_bucket_test.cc:255:37:
error: cannot convert ?CookieIface*? to ?const CookieIface&?
 ( https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/7.1.4/23/ )

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/7.1.4/56/ : FAILURE

Compile error at [2023-01-27T14:55:56.503Z] ../kv_engine/engines/ep/tests/module_tests/ephemeral_bucket_test.cc:255:37:
error: reference to type "const CookieIface" could not bind to an lvalue of type "CookieIface *"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/7.1.4/56/ )

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/7.1.4/26/ : FAILURE

Compile error at [2023-01-27T15:36:42.706Z] ../kv_engine/engines/ep/tests/module_tests/ephemeral_bucket_test.cc:255:37:
error: reference to type "const CookieIface" could not bind to an lvalue of type "CookieIface *"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/7.1.4/26/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/7.1.4/38/ : FAILURE

Compile error at [2023-01-27T15:40:27.627Z] ../kv_engine/engines/ep/tests/module_tests/ephemeral_bucket_test.cc:255:37:
error: reference to type "const CookieIface" could not bind to an lvalue of type "CookieIface *"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/7.1.4/38/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-714/24/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/22416/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
